<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/name"
        android:layout_width="337dp"
        android:layout_height="55dp"
        android:ems="10"
        android:hint="@string/enter_your_name"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="#FF000000"
        android:textColorHint="#FF000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.125" />

    <EditText
        android:id="@+id/college"
        android:layout_width="339dp"
        android:layout_height="49dp"
        android:ems="10"
        android:hint="@string/enter_your_college_name"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="#FF000000"
        android:textColorHint="#FF000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.337" />

    <EditText
        android:id="@+id/section"
        android:layout_width="338dp"
        android:layout_height="43dp"
        android:ems="10"
        android:hint="@string/enter_your_section"

        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="#FF000000"
        android:textColorHint="#FF000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.271" />

    <EditText
        android:id="@+id/stream"
        android:layout_width="337dp"
        android:layout_height="52dp"
        android:layout_marginBottom="384dp"
        android:ems="10"
        android:hint="@string/enter_your_stream"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="#FF000000"
        android:textColorHint="#FF000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/roll"
        android:layout_width="330dp"
        android:layout_height="47dp"
        android:ems="10"
        android:hint="@string/enter_your_roll_number"
        android:inputType="number"
        android:textAlignment="center"
        android:textColor="#FF000000"
        android:textColorHint="#FF000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.204" />

    <Button
        android:id="@+id/display"
        android:layout_width="221dp"
        android:layout_height="60dp"
        android:onClick="display"
        android:text="DISPLAY"
        android:textSize="24sp"
        app:backgroundTint="#FF0000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.57" />


</androidx.constraintlayout.widget.ConstraintLayout>